--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,32 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <div class="row">
+    <div class="col-xs-6 col-xs-10">
+      <h2>Autumn Is The Best Season</h2>
+      <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec ornare libero. Pellentesque justo urna, elementum nec sollicitudin vel, sollicitudin sed neque. Ut at blandit lacus. Nunc tempus velit eu gravida semper. Praesent hendrerit orci aliquam mauris pulvinar, et luctus lacus suscipit. Nullam accumsan nec justo a pellentesque. Curabitur a auctor leo, nec dictum diam. Nulla facilisi. Vivamus ut dignissim neque. Quisque dictum elit dui, vel pharetra lectus vestibulum aliquam. Phasellus gravida magna quis justo ornare porttitor. Integer hendrerit luctus justo iaculis imperdiet. Vivamus pharetra ut arcu ut feugiat. Donec leo velit, rutrum tempor posuere non, molestie vel purus. Morbi feugiat in eros a scelerisque.</p>
+    </div>
+    <div class="col-xs-6 col-xs-6">
+      <h2>Scarves, Apple Cider, and Boots</h2>
+      <p>Pellentesque hendrerit libero vel odio accumsan, accumsan auctor massa congue. Fusce eu ex convallis, tincidunt lacus eget, tristique enim. Phasellus scelerisque, erat dignissim posuere sollicitudin, leo quam maximus erat, ac fermentum risus libero et dolor. Phasellus vel quam sodales, consequat lacus sed, malesuada justo. Aenean finibus dapibus nibh, et aliquet justo. Sed quis volutpat mauris. Nullam in ornare diam. Curabitur feugiat rhoncus nisl vel fringilla. Curabitur auctor justo sit amet mi scelerisque tempus. Nunc a urna dolor. Proin malesuada, ante vitae iaculis dignissim, arcu odio porta dolor, sed fermentum odio justo vel tortor.</p>
+      </div>
+    <div class="col-xs-6 col-xs-6">
+      <img src="fallblog/fall2.jpg" />
+      <h3>Love Is In the Air</h3>
+      <p>Curabitur eu enim ultricies, tempor dolor nec, lacinia risus. Sed ac viverra felis. Donec non volutpat tortor. Vivamus sed neque ligula. Pellentesque porta vestibulum neque, eget iaculis dolor interdum sed. Sed eu arcu nec urna molestie faucibus quis in dui. Vestibulum eu ex mi. Phasellus eget iaculis purus, tincidunt lacinia est. Ut eros mauris, porta at pulvinar eu, convallis id turpis. Proin metus justo, fermentum in porttitor vitae, tempor eu metus. Mauris ultricies tristique ornare. Nam fermentum rutrum mi maximus venenatis.</p>
+    <div class="container">
+    <div class="col-xs-6 col-lg-4">
+      <h2>Most Popular Posts</h2>
+      <div class="nav4" style="height 40px;"
+      <a href="#" class="blogs"> <img src="fallblog/fall4.jpg" /></a>
+      <a href="#" class="blogs"> <img src="fallblog/fall5.jpg" /></a>
+      <a href="#" class="blogs"> <img src="fallblog/fall6.jpg" /><a/>
+      <a href="#" class="blogs"> <img src="fallblog/fall7.jpg" /><a/>
+    </div>
+  </div>
+  </div>
+  </div>
+</div>
 <%= yield %>
 
 </body>
