--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -19,7 +19,7 @@
             </div>
           </div>
         </div>
-          <% yeild %>
+          <%= yeild %>
       <footer class="container-fluid">
         <div class="col-xs-1"></div>
         <div class="col-lg-4 col-md-4 col-sm-12 footer-logo"
