updated from class

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,7 @@
       <img class="img-responsive" src="fallblog/logo.png"
     <p>&copy; IronYard-Michelle 2015</p>
     <div class="col-xs-6 col-sm-3 sidebar" id="sidebar">
-      <% sidebar.each do |sidebar| %>
-        <a href="#" class="list-group">Nav</a> <% sidebar[:class] %>
-        <% end %>
+        <a href="#" class="list-group">Nav</a> 
       </div>
     </div>
   </footer>
