--- a/app/views/post/post.html.erb
+++ b/app/views/post/post.html.erb
@@ -1,14 +1,14 @@
 <% @posts.each do |post| %>
   <div class="post-preview">
     <a href="<%post_path(:id => post.id) %>">
-      <h2 class="post_title">
+      <h2 class="post-title">
         <%post.title %>
       </h2>
-      <h3 class="post_subtitle">
-        <%= post.summary %>
+      <h3 class="post-subtitle">
+        <%= truncate(p.body) %>
       </h3>
     </a>
-    <p class="post-meta">Posted by <a href="#"><%= p.author %></a> on <%= p.created_at %></p>
+    <p class="post-meta">Posted by <a href="#"><%= p.author %></a> on <%= p.created_at.to_s(:long) %></p>
     </div>
     <hr>
   <% end %>
