--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -2,7 +2,7 @@
   font-family: Garmond;
 }
 .jumbotron {
-    background-image: url("images/images/fall1.jpg");
+    background-image: image-url("fallblog/fall1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
@@ -13,7 +13,7 @@
 p{
   font-family: Garmond, sans-serif;
   font-size: 1.2em;
-
+}
 .sidebar_p {
   margin-left: 25px;
 }
