created new posts

--- a/app/views/post/index.html.erb
+++ b/app/views/post/index.html.erb
@@ -2,7 +2,7 @@
 <main>
 <div class="container">
   <section>
-    <h1>A FANTASTIC ENGAGING HEADLINE GOES HERE</h1>
+    <h1>Fall In Love</h1>
     <ul class="author-info">
       <li><div class="author-photo"></div>Anne Marie</li>
       <li><a href="/">Monday Oct. 7th 9:22pm</a></li>
@@ -10,7 +10,7 @@
     <p>Single-origin coffee health goth High Life sriracha organic, chia yr Intelligentsia actually jean shorts. Brunch try-hard Truffaut, disrupt viral plaid DIY banh mi narwhal next level. Health goth put a bird on it American Apparel cray, cold-pressed Thundercats butcher locavore cornhole. Leggings irony slow-carb street art, food truck art party salvia pork belly fashion axe heirloom shabby chic Neutra. Kogi artisan twee Godard letterpress sustainable. </p>
     <p>Keytar selvage aesthetic Truffaut bicycle rights. Pinterest pug bicycle rights seitan Truffaut lomo. Portland squid fingerstache 90's, next level sriracha synth gentrify butcher irony aesthetic Godard Odd Future wolf. Salvia Odd Future Godard mumblecore, Echo Park chillwave art party cornhole tilde synth XOXO slow-carb. Letterpress cray Shoreditch wayfarers, drinking vinegar butcher vegan gentrify put a bird on it mustache Intelligentsia Neutra typewriter authentic.</p>
 
-    <div class="standout"><h2>WHOA THAT'S RADICAL</h2></div>
+    <div class="standout"><h2>Cider, Scarves, and Boots</h2></div>
 
     <p>Flexitarian PBR hella Bushwick, mixtape fingerstache four dollar toast try-hard ugh artisan. Keffiyeh Pinterest keytar shabby chic viral cray McSweeney's. Flexitarian gluten-free lo-fi street art, twee cliche fixie post-ironic cornhole flannel Austin slow-carb 90's health goth try-hard. Selfies literally before they sold out, Austin Intelligentsia bespoke vinyl ethical. Occupy viral +1 stumptown, four loko leggings ethical hella tofu whatever.</p>
     <p>Wes Anderson gentrify cornhole Truffaut fashion axe raw denim, normcore chia direct trade mumblecore before they sold out heirloom Intelligentsia Shoreditch artisan. Banjo Kickstarter vinyl forage. Cray vinyl polaroid letterpress squid twee Helvetica messenger bag 3 wolf moon, leggings cred literally beard roof party. High Life pickled crucifix, leggings Vice retro Carles kale chips normcore mumblecore tattooed church-key flexitarian aesthetic mixtape. Pork belly actually DIY pickled, health goth four loko street art.</p>
@@ -38,7 +38,7 @@
       <img src="images/wood-nature-forest-bridge.jpg">
     </div>
     <div class="sidebar-content">
-      <h4>SIDEBAR SECTION HEADING</h4>
+      <h4>Fall Weddings</h4>
       <p>Flexitarian PBR hella Bushwick, mixtape fingerstache four dollar toast try-hard ugh artisan. Keffiyeh Pinterest keytar shabby chic viral cray McSweeney's. Flexitarian gluten-free lo-fi street art, twee cliche fixie post-ironic cornhole flannel Austin slow-carb 90's health goth try-hard.</p>
     </div>
   </aside>
